--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "name": "new tab aesthetic",
   "version": "1.0",
   "description": "a new tab app",
-    "service_worker": "background.js"
+    "chrome_url_overrides": {
+    "newtab": "index.html"
  }
