--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
-  "manifest_version": 3, 
+  "manifest_version": 3,
   "name": "new tab aesthetic",
   "version": "1.0",
-  "description": "a new tab app"
-    "chrome_url_overrides": {
+  "description": "a new tab app",
+  "chrome_url_overrides": {
     "newtab": "index.html"
- }
+  }
+}
